--- a/index.html
+++ b/index.html
@@ -4,55 +4,111 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1">
 
-<title> Srishti Begins Phase 1</title>
+<title> Srishti Application FAC</title>
 <link rel="stylesheet" href="style.css">
-<!--Layout. First Title, brief intro and Carousel-->
 </head>
+
 <body>
+<!--Header image, navigation and social links-->
+<!--This is the navigation section about, I was finding it difficult to understand how to make it work and style it so I decided to code it within CodePen instead-->
+<header> 
+    <div class="menu-toggle">
+        <div class="bar half start"></div>
+        <div class="bar"></div>
+        <div class="bar half end"></div>
+    </div>
+    <div class="header-nav">
+        <nav class="top-nav">
+            <ul class="nav-list">
+                <li>
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="#About" class="nav-link">About</a>
+                </li>
+                <li>
+                    <a href="#Gallery" class="nav-link">Gallery</a>
+                </li>
+                <li>
+                    <a href="#Contact" class="nav-link">Contact</a>
+                </li>
+            </ul>
+
+        </nav>
+</div>
+</header>
+<section>
     <h1>Srishti Applies to FAC</h1>
-    <!--Container for Para in too long-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-<!--Start of Carousel -->
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+</section>
+    <!--Start of Carousel -->
 <div class="carousel">
     <h2>Srishti Makes a Carousel</h2>
-    <!--Completly forgot about the buttons for the carousel-->
-    <button class="carousel__button carousel__button--left"> <img src="iconmonstr-angel-left-circle-thin.svg" alt=""></button>
-   
-    <div class="carousel_container">
-        <ul class="carousel_track" >
+    <!--Buttons-->
+    <button class="carousel-button carousel-button--left"> <img src="iconmonstr-angel-left-circle-thin.svg" alt=""></button>
+   <!--Carousel Container-->
+    <div class="carousel-container">
+        <ul class="carousel-track" >
             <!--Change the pictures later-->
-            <li class="carousel_slide"> 
-                <img class="carousel_image" src="DSC08934.jpg" alt="" 
+            <li class="carousel-slide"> 
+                <img class="carousel-image" src="augustin-de-montesquiou-RqMIFcDLeos-unsplash.jpg" alt="" 
             </li>
-            <li class="carousel_slide"> 
-                <img class="carousel_image" src="IMG_20190519_124305.jpg" alt="" 
+            <li class="carousel-slide"> 
+                <img class="carousel-image" src="nick-fewings-pMX5x2KRqn4-unsplash.jpg" alt="" 
             </li>
-            <li class="carousel_slide"> 
-                <img class="carousel_image" src="IMG_20191230_154332.jpg" alt="" 
+            <li class="carousel-slide"> 
+                <img class="carousel-image" src="q-u-i-Zrp9b3PMIy8-unsplash.jpg" alt="" 
             </li>
-            <li class="carousel_slide"> 
-                <img class="carousel_image" src="IMG_20200426_120502.jpg" alt="" 
+            <li class="carousel-slide"> 
+                <img class="carousel-image" src="sean-o-KMn4VEeEPR8-unsplash.jpg" alt="" 
             </li>
         </ul>
     </div>
 
-    <button class="carousel__button carousel__button--right"><img src="iconmonstr-angel-right-circle-thin.svg" alt="">  </button>
+    <button class="carousel-button carousel-button--right"><img src="iconmonstr-angel-right-circle-thin.svg" alt="">  </button>
 <!--Naviation for the botton of the carousel-->
-<div class="carousel_navigation">
-    <button class="carousel_dots current_slide"></button>
-    <button class="carousel_dots"></button>
-    <button class="carousel_dots"></button>
-    <button class="carousel_dots"></button>
+<div class="carousel-navigation">
+    <button class="carousel-dots current-slide"></button>
+    <button class="carousel-dots"></button>
+    <button class="carousel-dots"></button>
+    <button class="carousel-dots"></button>
 </div>
 </div>
  <script> src="carousel.js" </script>
- <div class="social_media">
-     <ul>
-       <li class="social_icons"> <a href="https://www.codewars.com/dashboard" class="fa fa-codewars"></a> </li>
-       <li class="social_icons"> <a href="#" class="fa fa-twitter"></a> </li>
+
+ <!--Social media-->
+ <section>
+ <div class="social-media">
+     <ul class="social-links">
+
+       <li class="social-icons"> <a href:"#" target="_blank" class="fa fa-github fa-2x"></a> </li>
+       <li class="social-icons"> <a href:"#" target="_blank"class="fa fa-codewars fa-2x"></a> </li>
+       <li class="social-icons"> <a href:"#" target="_blank"class="fa fa-freecodecamp fa-2x"></a> </li>
         
      </ul>
  </div>
+</section>
+
+<section class="contact-form" id="contact">
+    <div class="container">
+       <div class="section-heading">
+           <h1>Any Comments? I would love your input</h1>
+</div>
+<form action="" >
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Please enter your name" required>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Please enter your email" required>
+    <label for="subject">Tell me more:</label>
+    <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
+    <input type="submit" value="submit">
+</form>
+</div>
+</section>
+
+
+
 </body>
 </html>
 
