--- a/index.html
+++ b/index.html
@@ -12,32 +12,23 @@
 <!--Header image, navigation and social links-->
 <!--This is the navigation section about, I was finding it difficult to understand how to make it work and style it so I decided to code it within CodePen instead-->
 <header> 
-    <div class="menu-toggle">
-        <div class="bar half start"></div>
-        <div class="bar"></div>
-        <div class="bar half end"></div>
+    <nav>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
     </div>
-    <div class="header-nav">
-        <nav class="top-nav">
-            <ul class="nav-list">
-                <li>
-                    <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li>
-                    <a href="#About" class="nav-link">About</a>
-                </li>
-                <li>
-                    <a href="#Gallery" class="nav-link">Gallery</a>
-                </li>
-                <li>
-                    <a href="#Contact" class="nav-link">Contact</a>
-                </li>
-            </ul>
-
-        </nav>
-</div>
+    <ul class="nav-links">
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Gallery">Gallery</a></li>
+        <li><a href="#Contact">Contact</a></li>
+    </ul>
+    </nav>
 </header>
-<section>
+<section class="landing">
+    <img src="atharva-tulsi-XQKd1UN7gUU-unsplash.jpg" alt="hills">
+    
     <h1>Srishti Applies to FAC</h1>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
@@ -75,9 +66,9 @@
     <button class="carousel-dots"></button>
 </div>
 </div>
- <script> src="carousel.js" </script>
+<script src="carousel.js" /script>
 
- <!--Social media-->
+
  <section>
  <div class="social-media">
      <ul class="social-links">
@@ -111,4 +102,3 @@
 
 </body>
 </html>
-
