Navigation is working through changes in CSS and JS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang = en-gb>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width initial-scale=1">
+<meta name="viewport" content="width=device-width initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
 
 <title> Srishti Application FAC</title>
 <link rel="stylesheet" href="style.css">
@@ -25,9 +27,9 @@
         <li><a href="#Contact">Contact</a></li>
     </ul>
     </nav>
+
 </header>
 <section class="landing">
-    <img src="atharva-tulsi-XQKd1UN7gUU-unsplash.jpg" alt="hills">
     
     <h1>Srishti Applies to FAC</h1>
 
@@ -66,7 +68,7 @@
     <button class="carousel-dots"></button>
 </div>
 </div>
-<script src="carousel.js" /script>
+
 
 
  <section>
@@ -99,6 +101,6 @@
 </section>
 
 
-
+<script src="carousel.js"></script>
 </body>
 </html>
