Carousel and nav bar working
Complete overhaul, previous attempts were very glitchy and the carousel would not move beyond the final slide.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <div class="line"></div>
         <div class="line"></div>
     </div>
-    <ul class="nav-links">
+    <ul class="nav-links" >
         <li><a href="#Home">Home</a></li>
         <li><a href="#About">About</a></li>
         <li><a href="#Gallery">Gallery</a></li>
         <li><a href="#Contact">Contact</a></li>
     </ul>
     </nav>
-
 </header>
 <section class="landing">
     
@@ -36,38 +35,29 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 </section>
     <!--Start of Carousel -->
-<div class="carousel">
     <h2>Srishti Makes a Carousel</h2>
-    <!--Buttons-->
-    <button class="carousel-button carousel-button--left"> <img src="iconmonstr-angel-left-circle-thin.svg" alt=""></button>
    <!--Carousel Container-->
-    <div class="carousel-container">
-        <ul class="carousel-track" >
-            <!--Change the pictures later-->
-            <li class="carousel-slide"> 
-                <img class="carousel-image" src="augustin-de-montesquiou-RqMIFcDLeos-unsplash.jpg" alt="" 
-            </li>
-            <li class="carousel-slide"> 
-                <img class="carousel-image" src="nick-fewings-pMX5x2KRqn4-unsplash.jpg" alt="" 
-            </li>
-            <li class="carousel-slide"> 
-                <img class="carousel-image" src="q-u-i-Zrp9b3PMIy8-unsplash.jpg" alt="" 
-            </li>
-            <li class="carousel-slide"> 
-                <img class="carousel-image" src="sean-o-KMn4VEeEPR8-unsplash.jpg" alt="" 
-            </li>
-        </ul>
+<div class="carousel-container">
+    <div class="carousel-slide">
+      <img class="carousel__photo" id="lastClone" src="Images/temple.jpg" alt="" >
+      <img class="carousel__photo" src="Images/Bar.jpg" alt="">
+      <img class="carousel__photo" src="Images/Beach.jpg" alt="">
+      <img class="carousel__photo" src="Images/Havana.jpg" alt="">
+      <img class="carousel__photo" src="Images/temple.jpg" alt="">
+      <img class="carousel__photo" id="firstClone" src="Images/Bar.jpg" alt="">
+          <!--Buttons-->
     </div>
-
-    <button class="carousel-button carousel-button--right"><img src="iconmonstr-angel-right-circle-thin.svg" alt="">  </button>
+</div>
+<buttons id="prevbutton"> <img src="back.png" alt=""> </buttons>
+<buttons id="nextbutton"> <img src="next.png" alt=""> </buttons>
 <!--Naviation for the botton of the carousel-->
-<div class="carousel-navigation">
+<!-- <div class="carousel-navigation">
     <button class="carousel-dots current-slide"></button>
     <button class="carousel-dots"></button>
     <button class="carousel-dots"></button>
     <button class="carousel-dots"></button>
-</div>
-</div>
+</div> -->
+
 
 
 
